# You must change these to your own details.
[package]
name = "tile-corruptor"
description = "Edit binary data (especially tile-based graphics)"
version = "0.0.1"
authors = ["R <rqou@berkeley.edu>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.69"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
