[package]
name = "tile-corruptor"
description = "Edit binary data (especially tile-based graphics)"
version = "0.0.1"
authors = ["R <rqou@berkeley.edu>"]
categories = ["wasm"]
readme = "README.md"
license = "0BSD"
repository = "https://github.com/ArcaneNibble/tile-coruptor"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
bitvec = "1"
console_error_panic_hook = "0.1.7"
png = "0.17.13"
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.69"
features = [
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
